fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -91,10 +91,10 @@ body {
   }
 
   .card-img {
-  display: block;
-  margin: auto;
-  padding-bottom: 1.5em;
-}
+    display: block;
+    margin: auto;
+    padding-bottom: 1.5em;
+  }
 
   .card {
     display: inline-block;
@@ -110,6 +110,8 @@ body {
     padding: 0;
     margin: 0;
   }
+
+}
 
 @media only screen and (min-width: 60em) {
 
